added day03 workshop

--- a/day02/deploy-bgg-app-v2.yaml
+++ b/day02/deploy-bgg-app-v2.yaml
@@ -63,6 +63,7 @@ spec:
   type: LoadBalancer
   selector:
     app.kubernetes.io/name: bgg-app-pod
+    app.kubernetes.op/version: "v2"
   ports:
   - name: mysql-port-svc
     port: 80
