--- a/day03/bgg/deploy-bgg-app-v2.yaml
+++ b/day03/bgg/deploy-bgg-app-v2.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata:
-  name: bgg-app-deployment
+  name: bgg-app-deployment-v2
   namespace: workshop02
 
 spec:
@@ -13,17 +13,25 @@ spec:
     matchLabels:
       app.kubernetes.io/name: bgg-app-pod
 
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+
   template:
     metadata:
       name: bgg-app-pod
       labels:
         app.kubernetes.io/name: bgg-app-pod
-        app.kubernetes.op/version: "v1"
-        owner: engineering
+        app.kubernetes.op/version: "v2"
+#        app.kubernetes.op/version: "v1"
+#        owner: engineering
     spec:
       containers:
-      - name: bgg-app-pod
-        image: stackupiss/bgg-app:v1
+      - name: bgg-app-container
+#        image: stackupiss/bgg-app:v1
+        image: stackupiss/bgg-app:v2
         imagePullPolicy: Always
         env:
         - name: APP_PORT
@@ -46,7 +54,7 @@ apiVersion: v1
 kind: Service
 
 metadata:
-  name: bgg-app-svc
+  name: bgg-app-svc-v2
   namespace: workshop02
   labels:
     name: bgg-app-svc
@@ -55,9 +63,9 @@ spec:
   type: ClusterIP
   selector:
     app.kubernetes.io/name: bgg-app-pod
-    app.kubernetes.op/version: "v1"
+    app.kubernetes.op/version: "v2"
   ports:
   - name: mysql-port-svc
-    port: 80
+    port: 8080
     targetPort: bgg-app-port
 
