--- a/day03/bgg/deploy-bgg-app.yaml
+++ b/day03/bgg/deploy-bgg-app.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata:
-  name: bgg-app-deployment
+  name: bgg-app-deployment-v1
   namespace: workshop02
 
 spec:
@@ -18,6 +18,7 @@ spec:
       name: bgg-app-pod
       labels:
         app.kubernetes.io/name: bgg-app-pod
+#        app.kubernetes.op/version: "v2"
         app.kubernetes.op/version: "v1"
         owner: engineering
     spec:
@@ -25,6 +26,9 @@ spec:
       - name: bgg-app-pod
         image: stackupiss/bgg-app:v1
         imagePullPolicy: Always
+        resources:
+          requests:
+            cpu:  100m
         env:
         - name: APP_PORT
           value: "3000"
@@ -46,7 +50,7 @@ apiVersion: v1
 kind: Service
 
 metadata:
-  name: bgg-app-svc
+  name: bgg-app-svc-v1
   namespace: workshop02
   labels:
     name: bgg-app-svc
