--- a/day03/bgg/deploy-bgg-app-v2.yaml
+++ b/day03/bgg/deploy-bgg-app-v2.yaml
@@ -57,7 +57,7 @@ metadata:
   name: bgg-app-svc-v2
   namespace: workshop02
   labels:
-    name: bgg-app-svc
+    name: bgg-app-svc-v2
 
 spec:
   type: ClusterIP
